--- a/index.html
+++ b/index.html
@@ -36,5 +36,23 @@
             <div class="button equals double">=</div>
         </div>
     </div>
+
+    <div class="history card">
+        <h2>Riwayat Perhitungan</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Angka Pertama</th>
+                    <th>Operator</th>
+                    <th>Angka Kedua</th>
+                    <th>Hasil</th>
+                </tr>
+            </thead>
+            <tbody id="historyList"></tbody>
+        </table>
+    </div>
+
+<script src="js/script.js"></script>
+<script src="js/storage.js"></script>
 </body>
 </html>
